--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,22 @@ padding: 5px;
  
 html[xmlns] .clearfix { display: block; }
 * html .clearfix { height: 1%; }
+
+.button {
+    background-color: #4CAF50; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+#title {
+  margin-top: 50px;
+  margin-bottom: 40px;
+  color:red;
+  font-size: 20px;
+}
